--- a/App/templates/producto/fichaProducto.html
+++ b/App/templates/producto/fichaProducto.html
@@ -4,151 +4,150 @@
 
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 <style>
-  .card-deck{
-    width: 700px;
-    display:block;
-    margin:auto;
-  }
-  .btn-success{
-    background-color: transparent;
-    font-size: 26px;
-    margin-right:5px;
-    margin-left:5px;
-    margin-bottom:2px;
-    margin-top: 5px;
-    border: none;
-  }
-  .btn-ej{
-    background-color: #18BC9C;
-    font-size: 20px;
-    margin-right:5px;
-    margin-left:5px;
-    margin-bottom:15px;
-    margin-top: 5px;
-    border: none;
-    color:whitesmoke;
-  }
-  .imagen{
-    display:block;
-    margin:auto;
-    width: 400px;
-    height: 400px;
-  }
-  .card{
-    border-radius: 20px;
-    background-color: transparent;
-    border-color: gray;
-  }
-  .card-text{
-    text-align: left;
-    font-size: 20px;
-    color: black;
-    margin-left: 10px;
-  }
-  section.awSlider{
-    margin:30px auto;
-    padding:30px;
-    position:relative;
-    display:table;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-  }
-
-  section.awSlider img{
-    pointer-events: none;
-  }
-
-  section.awSlider > img{
-    position:absolute;
-    top:30px;
-    z-index:1;
-    transition:all .3s;
-    filter: blur(1.8vw);
-    -webkit-filter: blur(2vw);
-    -moz-filter: blur(2vw); 
-    -o-filter: blur(2vw); 
-    -ms-filter: blur(2vw);
-    -ms-transform: scale(1.1);
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
-    opacity:.5;
-  }
+    .card-deck {
+        width: 700px;
+        display: block;
+        margin: auto;
+    }
+    
+    .btn-success {
+        background-color: transparent;
+        font-size: 26px;
+        margin-right: 5px;
+        margin-left: 5px;
+        margin-bottom: 2px;
+        margin-top: 5px;
+        border: none;
+    }
+    
+    .btn-ej {
+        background-color: #18BC9C;
+        font-size: 20px;
+        margin-right: 5px;
+        margin-left: 5px;
+        margin-bottom: 15px;
+        margin-top: 5px;
+        border: none;
+        color: whitesmoke;
+    }
+    
+    .imagen {
+        display: block;
+        margin: auto;
+        width: 400px;
+        height: 400px;
+    }
+    
+    .card {
+        border-radius: 20px;
+        background-color: transparent;
+        border-color: gray;
+    }
+    
+    .card-text {
+        text-align: left;
+        font-size: 20px;
+        color: black;
+        margin-left: 10px;
+    }
+    
+    section.awSlider {
+        margin: 30px auto;
+        padding: 30px;
+        position: relative;
+        display: table;
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+    }
+    
+    section.awSlider img {
+        pointer-events: none;
+    }
+    
+    section.awSlider>img {
+        position: absolute;
+        top: 30px;
+        z-index: 1;
+        transition: all .3s;
+        filter: blur(1.8vw);
+        -webkit-filter: blur(2vw);
+        -moz-filter: blur(2vw);
+        -o-filter: blur(2vw);
+        -ms-filter: blur(2vw);
+        -ms-transform: scale(1.1);
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
+        opacity: .5;
+    }
 </style>
 
 <body>
     <div class="d-flex" id="wrapper">
         {% include 'navbars/sidebar.html' %}
-        <div id="page-content-wrapper">    
+        <div id="page-content-wrapper">
             <div class="container p-2" style="margin-top: 70px;">
-              <div class="card-deck">
-                  <div class="card">
-                    <section class="awSlider">
-                      <div  class="carousel slide" data-ride="carousel">
-                        <div class="carousel-inner" role="listbox">
-                          {% if cantidadFotos == 0 %}
-                            <div class="item active">
-                              <img class="imagen" src="..\static\img\producto-default.png">
-                            </div>
-                          {%endif%}
+                <div class="card-deck">
+                    <div class="card">
+                        <section class="awSlider">
+                            <div class="carousel slide" data-ride="carousel">
+                                <div class="carousel-inner" role="listbox">
+                                    {% if cantidadFotos == 0 %}
+                                    <div class="item active">
+                                        <img class="imagen" src="..\static\img\producto-default.png">
+                                    </div>
+                                    {%endif%} {% if cantidadFotos != 0 %} {% for foto in range(cantidadFotos) %} {% if foto == 0 %}
+                                    <div class="item active">
+                                        <img class="imagen" src="{{fotos[foto][0]}}">
+                                    </div>
+                                    {%endif%} {% if foto != 0 %}
+                                    <div class="item">
+                                        <img class="imagen" src="{{fotos[foto][0]}}">
+                                    </div>
+                                    {%endif%} {%endfor%} {%endif%}
+                                </div>
 
-                          {% if cantidadFotos != 0 %}
-                            {% for foto in range(cantidadFotos) %}
-                              {% if foto == 0 %}
-                                <div class="item active">
-                                  <img class="imagen" src="{{fotos[foto][0]}}">
-                                </div>
-                              {%endif%}
-                              {% if foto != 0 %}
-                                <div  class="item">
-                                  <img class="imagen" src="{{fotos[foto][0]}}">
-                                </div>
-                              {%endif%}
-                            {%endfor%}
-                          {%endif%}
+                                <!-- Controls -->
+                                <a class="left carousel-control" href=".carousel" role="button" data-slide="prev">
+                                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                                    <span class="sr-only">Geri</span>
+                                </a>
+                                <a class="right carousel-control" href=".carousel" role="button" data-slide="next">
+                                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                                    <span class="sr-only">İleri</span>
+                                </a>
+                            </div>
+                        </section>
+                        <div class="card-body">
+                            <center>
+                                <h2 style="color: black;" class="card-title">{{data[1]}}</h2>
+                                <form action="ejemplaresDeUnProducto" method="POST">
+                                    <div>
+                                        <input value="{{data[0]}}" type="hidden" class="form-control" name="id_prod" id="id_prod">
+                                        <input value="{{data[1]}}" type="hidden" class="form-control" name="nombre_prod" id="nombre_prod">
+                                        <button class="btn btn-ej" type="submit">Ejemplares</button>
+                                    </div>
+                                </form>
+                                <p class="card-text">Descripción: {{data[2]}}</p>
+                                <p class="card-text">Modelo: {{data[4]}}</p>
+                                <p class="card-text">Garantía: {{data[5]}} meses</p>
+                                <p class="card-text">Precio: ${{data[3]}}</p>
+                                <p class="card-text">Stock: {{stock[0][0]}}</p>
+                                <a href="{{ url_for('eliminarProducto')}}/{{data[0]}}" class="btn btn-success"><span class="fa fa-trash"></span></a>
+                                <a href="{{ url_for('modificarProducto')}}/{{data[0]}} " class="btn btn-success"><span class="fa fa-edit"></span></a>
+                            </center>
                         </div>
-                    
-                        <!-- Controls -->
-                        <a class="left carousel-control" href=".carousel" role="button" data-slide="prev">
-                          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                          <span class="sr-only">Geri</span>
-                        </a>
-                        <a class="right carousel-control" href=".carousel" role="button" data-slide="next">
-                          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                          <span class="sr-only">İleri</span>
-                        </a>
-                      </div>
-                    </section>
-                    <div class="card-body">
-                      <center>
-                        <h2  style="color: black;" class="card-title">{{data[1]}}</h2>
-                        <form action="ejemplaresDeUnProducto" method="POST">
-                          <div>
-                              <input value="{{data[0]}}" type="hidden" class="form-control" name="id_prod" id="id_prod">
-                              <input value="{{data[1]}}" type="hidden" class="form-control" name="nombre_prod" id="nombre_prod">
-                              <button class="btn btn-ej" type="submit">Ejemplares</button>
-                          </div>
-                      </form>
-                        <p class="card-text">Descripción: {{data[2]}}</p>
-                        <p class="card-text">Modelo: {{data[4]}}</p>
-                        <p class="card-text">Garantía: {{data[5]}} meses</p>
-                        <p class="card-text">Precio: ${{data[3]}}</p>
-                        <p class="card-text">Stock: {{stock[0][0]}}</p>
-                        <a href="{{ url_for('eliminarProducto')}}/{{data[0]}}" class="btn btn-success"><span class="fa fa-trash"></span></a>
-                        <a href="{{ url_for('modificarProducto')}}/{{data[0]}} "  class="btn btn-success"><span class="fa fa-edit"></span></a>
-                      </center>
                     </div>
-                  </div>
-              </div>
+                </div>
             </div>
         </div>
     </div>
