--- a/App/templates/producto/verProducto.html
+++ b/App/templates/producto/verProducto.html
@@ -1,184 +1,185 @@
 <!DOCTYPE html>
 <html lang="en">
 {% include 'header/header.html' %}
-
+<!--
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+-->
 <style>
-  .card-deck{
-    width: 90%;
-    margin-top: 60px;
-    display:block;
-    margin:auto;
-    margin-top: 80px;
-  }
-  .btn-success{
-    background-color:  #18BC9C;
-    font-size: 20px;
-    padding-right:25px;
-    padding-left:25px;
-    margin-bottom:5px;
-    margin-top: 5px;
-    border: #18BC9C;
-    margin-top: 20px;
-  }
-  .imagen{
-    display:block;
-    margin:auto;
-    width: 400px;
-    height: 400px;
-  }
-  .card{
-    border-radius: 20px;
-    border: transparent;
-  }
-  .card-body{
-    padding-left: 30px;
-  }
-  .sinstock{
-    background-color: red;
-    width: 100%;
-    font-size: 20px;
-  }
-
-  section.awSlider{
-    margin:30px auto;
-    padding:30px;
-    position:relative;
-    display:table;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-  }
-
-  section.awSlider img{
-    pointer-events: none;
-  }
-
-  section.awSlider > img{
-    position:absolute;
-    top:30px;
-    z-index:1;
-    transition:all .3s;
-    filter: blur(1.8vw);
-    -webkit-filter: blur(2vw);
-    -moz-filter: blur(2vw); 
-    -o-filter: blur(2vw); 
-    -ms-filter: blur(2vw);
-    -ms-transform: scale(1.1);
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
-    opacity:.5;
-  }
-  .card-title{
-    text-align: center;
-    font-size: 40px;
-    padding-bottom: 15px;
-  }
-  .card-text{
-    font-size: 22px;
-  }
-  .card-text-precio{
-    font-size: 22px;
-    font-style:italic;
-    font-weight: bold;
-  }
-  .btn-comprar{
-    display:block;
-    margin:auto;
-    border: none;
-    background-color: transparent;
-    font-size: 40px;
-    padding-top: 10px;
-    color: #18BC9C;
-  }
+    .card-deck {
+        width: 90%;
+        margin-top: 60px;
+        display: block;
+        margin: auto;
+        margin-top: 80px;
+    }
+    
+    .btn-success {
+        background-color: #18BC9C;
+        font-size: 20px;
+        padding-right: 25px;
+        padding-left: 25px;
+        margin-bottom: 5px;
+        margin-top: 5px;
+        border: #18BC9C;
+        margin-top: 20px;
+    }
+    
+    .imagen {
+        display: block;
+        margin: auto;
+        width: 400px;
+        height: 400px;
+    }
+    
+    .card {
+        border-radius: 20px;
+        border: transparent;
+    }
+    
+    .card-body {
+        padding-left: 30px;
+    }
+    
+    .sinstock {
+        background-color: red;
+        width: 100%;
+        font-size: 20px;
+    }
+    
+    section.awSlider {
+        margin: 30px auto;
+        padding: 30px;
+        position: relative;
+        display: table;
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+    }
+    
+    section.awSlider img {
+        pointer-events: none;
+    }
+    
+    section.awSlider>img {
+        position: absolute;
+        top: 30px;
+        z-index: 1;
+        transition: all .3s;
+        filter: blur(1.8vw);
+        -webkit-filter: blur(2vw);
+        -moz-filter: blur(2vw);
+        -o-filter: blur(2vw);
+        -ms-filter: blur(2vw);
+        -ms-transform: scale(1.1);
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
+        opacity: .5;
+    }
+    
+    .card-title {
+        text-align: center;
+        font-size: 40px;
+        padding-bottom: 15px;
+    }
+    
+    .card-text {
+        font-size: 22px;
+    }
+    
+    .card-text-precio {
+        font-size: 22px;
+        font-style: italic;
+        font-weight: bold;
+    }
+    
+    .btn-comprar {
+        display: block;
+        margin: auto;
+        border: none;
+        background-color: transparent;
+        font-size: 40px;
+        padding-top: 10px;
+        color: #18BC9C;
+    }
 </style>
 
 <body>
     <div class="d-flex" id="wrapper">
         {% include 'navbars/sidebar_usuarios.html' %}
-        <div id="page-content-wrapper">       
+        <div id="page-content-wrapper">
             <div class="container p-2">
-              <div class="card-deck">
-                  <div class="card">
-                    <table>
-                      <tr>
-                        <td>
-                        <section class="awSlider">
-                        <div  class="carousel slide" data-ride="carousel">
-                          <div class="carousel-inner" role="listbox">
-                            {% if cantidadFotos == 0 %}
-                              <div class="item active">
-                                <img class="imagen" src="..\static\img\producto-default.png">
-                              </div>
-                            {%endif%}
+                <div class="card-deck">
+                    <div class="card">
+                        <table>
+                            <tr>
+                                <td>
+                                    <section class="awSlider">
+                                        <div class="carousel slide" data-ride="carousel">
+                                            <div class="carousel-inner" role="listbox">
+                                                {% if cantidadFotos == 0 %}
+                                                <div class="item active">
+                                                    <img class="imagen" src="..\static\img\producto-default.png">
+                                                </div>
+                                                {%endif%} {% if cantidadFotos != 0 %} {% for foto in range(cantidadFotos) %} {% if foto == 0 %}
+                                                <div class="item active">
+                                                    <img class="imagen" src="{{fotos[foto][0]}}">
+                                                </div>
+                                                {%endif%} {% if foto != 0 %}
+                                                <div class="item">
+                                                    <img class="imagen" src="{{fotos[foto][0]}}">
+                                                </div>
+                                                {%endif%} {%endfor%} {%endif%}
+                                            </div>
 
-                          {% if cantidadFotos != 0 %}
-                            {% for foto in range(cantidadFotos) %}
-                              {% if foto == 0 %}
-                                <div class="item active">
-                                  <img class="imagen" src="{{fotos[foto][0]}}">
-                                </div>
-                              {%endif%}
-                              {% if foto != 0 %}
-                                <div  class="item">
-                                  <img class="imagen" src="{{fotos[foto][0]}}">
-                                </div>
-                              {%endif%}
-                            {%endfor%}
-                          {%endif%}
-                          </div>
-                      
-                          <!-- Controls -->
-                          <a class="left carousel-control" href=".carousel" role="button" data-slide="prev">
-                            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                            <span class="sr-only">Geri</span>
-                          </a>
-                          <a class="right carousel-control" href=".carousel" role="button" data-slide="next">
-                            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                            <span class="sr-only">İleri</span>
-                          </a>
+                                            <!-- Controls -->
+                                            <a class="left carousel-control" href=".carousel" role="button" data-slide="prev">
+                                                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                                                <span class="sr-only">Geri</span>
+                                            </a>
+                                            <a class="right carousel-control" href=".carousel" role="button" data-slide="next">
+                                                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                                                <span class="sr-only">İleri</span>
+                                            </a>
+                                        </div>
+                                    </section>
+                                </td>
+                                <td style="vertical-align: top;">
+                                    <div class="card-body">
+                                        <h2 class="card-title">{{data[1]}}</h2>
+                                        <p class="card-text">{{data[2]}}</p>
+                                        <p class="card-text">Modelo {{data[4]}}</p>
+                                        <p class="card-text">Garantía {{data[5]}} meses</p>
+                                        <p class="card-text-precio">${{data[3]}}</p>
+                                        {% if stock[0][0] == 0 %}
+                                        <div class="sinstock">
+                                            Sin stock
+                                        </div>
+                                        {%endif%} {% if stock[0][0] != 0 %}
+                                        <form action="agregarAlCarrito" method="POST">
+                                            <div style="padding: 0px;padding-top: 2px;" class="form-group">
+                                                <input value="{{data[0]}}" type="hidden" class="form-control" name="id" id="id">
+                                                <button class="btn-comprar" type="submit"><span class="fa fa-cart-plus"></span></button>
+                                        </form>
+                                        <div class="comprar">
+                                            {%endif%}
+                                        </div>
+                                </td>
+                            </tr>
+                        </table>
                         </div>
-                      </section>
-                    </td>
-                    <td style="vertical-align: top;">
-                      <div class="card-body">
-                          <h2 class="card-title">{{data[1]}}</h2>
-                          <p class="card-text">{{data[2]}}</p>
-                          <p class="card-text">Modelo {{data[4]}}</p>
-                          <p class="card-text">Garantía {{data[5]}} meses</p>
-                          <p class="card-text-precio">${{data[3]}}</p>
-                          {% if stock[0][0] == 0 %}
-                            <div class="sinstock">
-                              Sin stock
-                            </div>
-                          {%endif%} 
-                          {% if stock[0][0] != 0 %}
-                            <form action="agregarAlCarrito" method="POST">
-                              <div style="padding: 0px;padding-top: 2px;" class="form-group">
-                              <input value="{{data[0]}}" type="hidden" class="form-control" name="id" id="id">
-                              <button class="btn-comprar" type="submit"><span class="fa fa-cart-plus"></span></button>
-                            </form>
-                          <div class="comprar">
-                          {%endif%}
-                      </div>
-                    </td>
-                      </tr>
-                    </table>  
+                        </div>
                     </div>
-              </div>
+                </div>
             </div>
-        </div>
-    </div>
-    {% include 'footer/footer.html' %}
+            {% include 'footer/footer.html' %}
 
 </body>
 
