--- a/App/templates/navbars/navbar_usuario_logueado.html
+++ b/App/templates/navbars/navbar_usuario_logueado.html
@@ -1,12 +1,12 @@
 <style>
-    .menuUsuario ul {
+    /*.menuUsuario ul {
         display: flex;
         padding-top: 10px;
         padding-left: 0;
         margin: 0;
         list-style: none;
         float: right;
-    }
+    }*/
     /*.menuUsuario a {
         display: block;
         padding: 10px;
@@ -33,8 +33,8 @@
     }*/
 </style>
 <!--<nav class="menuUsuario">-->
-<nav class="menuUsuario  navbar navbar-expand-lg navbar-light bg-dark p-1">
-    <ul class="navbar-nav mr-auto mr-sm-2">
+<nav class="menuUsuario  navbar navbar-expand-lg navbar-light bg-dark p-1 justify-content-end">
+    <ul class="navbar-nav  my-2 my-lg-0">
         <li class="nav-item dropdown mr-sm-2"><a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i style="font-size: 30px;" class="fas fa-user"></i></a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="miCuenta">Mi cuenta</a>
